Included a functional animation on the modal window to slide it in. I also tried to animate the background to fade in but no dice. I think the issue is that it is either visibility:hidden or display:none and that prevents the background-color transition. Can do with javascript instead.

--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -8,8 +8,13 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.4);
+  visibility: visible;
   z-index: 10;
+}
+#modal[aria-hidden="true"] {
+  background-color: rgba(0, 0, 0, 0);
+  visibility: hidden;
 }
 #modal-body {
   display: flex;
@@ -19,12 +24,11 @@
   height: 100%;
   z-index: 11;
   position: relative;
-  .btn {
-    width: 150px;
-  }
+  right: 0;
+  transition: right 0.5s ease-in-out;
 }
-[aria-hidden="true"] {
-  display: none !important;
+#modal-body[aria-hidden="true"] {
+  right: 360px;
 }
 main {
   display: grid;
